@@ -2,6 +2,9 @@
 
 	* src/calendar/base/src/calDavCalendar.js: webdav sync: fixed a
 	bug that would continuously refresh the inbox.
+	Added a patch from Simon Vaillancourt @ Oracle that postpones any
+	refresh method prior to an initial delay specified in the
+	"calendar.caldav.refresh.initialdelay" setting.
 
 	* We avoid having view triggering getItems when an "onLoad" or an
 	"onEndBatch" notification is received. Instead, we reenable the
